videos section on mobile fixed

--- a/src/Components/Videos/videos.css
+++ b/src/Components/Videos/videos.css
@@ -80,6 +80,11 @@ justify-content: flex-end;
 }
 
 @media screen and (max-width: 768px){
+
+    .mainVideoWrapper {
+     margin-top: 500px;
+    }
+
     .aboutUsHeading {
         font-size: 36px;
         text-align: center;
