--- a/src/stylesheets/events.css
+++ b/src/stylesheets/events.css
@@ -159,7 +159,7 @@ img {
 .card-text > p {
   font-size: 12px;
   margin-bottom: 2vh;
-  text-align: center;
+  text-align: leftsd;
 }
 .card-text > h3 {
   margin: 0;
